# scadsai_room_booking

./: readme.md  requirements.txt  setup.cfg
demo/: calendar_management.ipynb
src/scadsai_room_booking/: __init__.py  _config.py  _room_booking.py  _streamlit_script.py  _utilities.py
