[metadata]
name = scadsai-room-booking
version = attr: scadsai_room_booking.__version__
description = Room bookings at ScaDS.AI / Uni Leipzig made easy
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/scads/scads-room-booking
author = Robert Haase
author_email = robert.haase@uni-leipzig.de
license = BSD-3-Clause
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
project_urls =
    Bug Tracker = https://github.com/scads/scads-room_booking/issues
    Documentation = https://github.com/scads/scads-room-booking#README.md
    Source Code = https://github.com/scads/scads-room-booking
    User Support = https://github.com/scads/scads-room-booking/issues

[options]
packages = find:
install_requires =
    streamlit
    caldav
    scikit-image
    

python_requires = >=3.9
include_package_data = True
package_dir =
    =src

# add your package requirements here

[options.packages.find]
where = src

[options.extras_require]
testing =
    tox
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/


[options.package_data]
* = *.yaml


[options.entry_points]
console_scripts =
    scadsai-room-booking = scadsai_room_booking._streamlit_script:main

